# solaxie

./: .gitignore  README.md  metadata.json
app/: .env.example  DEPLOY.md  next.config.js  package-lock.json  package.json  tailwind.config.js  theme.ts  vercel.json
app/components/: AxolCard.tsx  RequestAirdrop.tsx  WalletMultiButton.tsx
app/contexts/: WalletContextProvider.tsx
app/idl/: solaxie.json  solaxie.ts  token.json
app/lib/: achievements.ts  airdrops.ts  chain-mapper.ts  chain.ts  cloud-save-store.ts  cloud-save.ts  demo-wallet.ts  dex-catalog.ts  dex-rewards.ts  economy-chain.ts  featured-leaderboard.ts  feed-store.ts  friends-store.ts  game.ts  global-feed.ts  global-players.ts  global-stats.ts  guest-mode.ts  harbor-items.ts  market-watch.ts  marketplace-store.ts  marketplace.ts  phantom.ts  players-store.ts  pond-layout.ts  pond-layouts.ts  profile.ts  progression.ts  public-player.ts  rpc-balance.ts  save.ts  season.ts  sfx.ts  site.ts  solax-burn.ts  solax-spend.ts  stats-store.ts  ticket-leaderboard.ts  token.ts  ui-icons.ts  (+2 more)
app/pages/: _app.tsx  _document.tsx  index.tsx
app/public/: site.webmanifest
app/scripts/: demo.js  deploy-init.js  fund-vault.js  remove-black-bg.mjs  (+3 more)
program/: Anchor.toml
program/programs/solaxie/: Cargo.toml
program/programs/solaxie/src/: constants.rs  errors.rs  genes.rs  lib.rs
program/programs/solaxie/src/instructions/: battle.rs  breed.rs  fund_treasury.rs  init_player.rs  initialize.rs  mint_axol.rs  mod.rs  shop_purchase.rs
program/programs/solaxie/src/state/: axol.rs  game_data.rs  mod.rs  player_data.rs
(+53 files in other folders)
