[package]
name = "solaxie"
version = "0.1.0"
description = "Solaxie - a collect, breed and battle creature game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solaxie"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
solana-security-txt = "1.1.1"
